feat: add methods to retrieve uncompleted test questions and save test results by ID